--- a/04_04/04_04.ipynb
+++ b/04_04/04_04.ipynb
@@ -13,7 +13,7 @@
    "id": "b126d991",
    "metadata": {},
    "source": [
-    "### Install the necesarry libraries. "
+    "### Install the necessary libraries. "
    ]
   },
   {
